# CAOvinder

./: .env.example  .gitignore  BATCH_PROCESSING_IMPLEMENTATION.md  BATCH_TEST_RESULTS.md  CLAUDE.md  COMPARISON_OCR_APPROACHES.md  HYBRID_ARCHITECTURE_FINAL.md  METALEKTRO_TEST_RESULT.md  POC_FINDINGS.md  POST_MORTEM_4_CAO_VALIDATION.md  POST_MORTEM_WEEK2.md  PROOF_OF_CONCEPT.md  README.md  SETU_V2_PROCESSING_REPORT.md  SYSTEM_SUMMARY.md  VALIDATION_CHECKLIST.md  VALIDATION_SYSTEM_STATUS.md  analyze_errors.py  analyze_hybrid_results.py  batch_ocr_10.py  fix_achmea_arrays.py  fix_achmea_final.py  fix_salary_scales.py  fix_wml_values.py  process_batch.sh  pyproject.toml  run_4_caos_fixed.sh  test_4_caos_compliant.sh  test_4_caos_simple.sh  test_batch_docai.py  test_clean_hybrid.py  test_edge_case_annotation.py  test_metalektro.py  test_metalektro_fast.py  test_mistral_document_ai.py  test_setu_extraction_with_docai.py  test_three_caos.py  test_three_caos_fast.py  test_transformer_fix.py
.claude/: .ralph-loop.local.md
cao-admin/: README.md  jest.config.js  jest.setup.js  package-lock.json  package.json
data/: cao_setu_mappings.yaml
docs/: CAO_SETU_MAPPING_GUIDE.md  LLM_DATA_FORMAT_RECOMMENDATIONS.md  SETU_V2_UPDATE_MARCH2026.md  TIMELINE_FEATURE.md
scripts/: backfill_provenance.py  gelijkwaardige-beloning-api.yaml
tests/: TEST_STRATEGY_API_AUTH.md  conftest.py  test_3llm_pipeline.py  test_api_authentication.py  test_api_documentation.py  test_api_endpoints.py  test_api_rate_limiting.py  test_api_setu.py  test_basic.py  test_data_processing.py  test_end_to_end.py  (+14 more)
(+279 files in other folders)
