[project]
name = "cao-engine"
version = "0.1.0"
description = "CAO Centraal - AI-native processing of Dutch Collective Labour Agreements"
requires-python = ">=3.11"
dependencies = [
    "mistralai>=1.6.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "typer>=0.15.0",
    "rich>=13.9.0",
    "httpx>=0.28.0",
    "structlog>=24.4.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
cao-engine = "cao_engine.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cao_engine"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/cao_engine/cli.py" = ["B008"]  # Typer requires function calls in defaults

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "online: tests that hit live LLM APIs (skipped by default; run with -m online)",
]

[tool.mypy]
python_version = "3.11"
strict = true
